# mcp-stealth-chrome

./: INSTALL.md  LICENSE  README.md  pyproject.toml
src/mcp_stealth_chrome/: __init__.py  captcha.py  helpers.py  humanize.py  patches.py  server.py  state.py
src/mcp_stealth_chrome/tools/: devtools.py  network_http.py  vision.py
tests/: test_registry.py  test_smoke.py
